# term_wifi

./: CHANGELOG  Makefile  Makefile.in  README.md  command_line.c  command_line.h  common.c  common.h  config.status  configure  configure.ac  help.c  help.h  interactive.c  interactive.h  iw.c  iw.h  main.c  manpage.md  net.c  net.h  netdev.c  netdev.h  qrcode.c  qrcode.h  runcommand.c  runcommand.h  settings.c  settings.h  term_wifi  term_wifi.1  wifi.c  wifi.h  wireless_tools.c  wireless_tools.h  wpa_supplicant.c  wpa_supplicant.h
autom4te.cache/: output.0  requests  traces.0
libUseful/: config.status
libUseful-4/: Makefile  OpenSSL.h  config.status
